check views will load a view in web browser

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,16 @@
 </head>
 <body>
   <h1>Sweets like Chocolate</h1>
-  
+  <nav>
+    <ul>
+      <li>
+        <a href="/products">Products</a>
+      </li>
+      <li>
+        <a href="/suppliers">Suppliers</a>
+      </li>
+    </ul>
+  </nav>
   <%= yield %>
 </body>
 </html>
