--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,9 @@
   <nav>
     <ul>
       <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
         <a href="/products">Products</a>
       </li>
       <li>
