--- a/views/suppliers/index.erb
+++ b/views/suppliers/index.erb
@@ -1,1 +1,17 @@
 <h1>Suppliers we use</h1>
+
+
+<table>
+  <tr>
+    <th>Name</th>
+    <th></th>
+    <th>To reorder, call:</th>
+  </tr>
+  <% for supplier in @suppliers %>
+  <tr>
+    <td><%= supplier.name %></td>
+    <td>|</td>
+    <td><%= supplier.telephone_number %></td>
+  </tr>
+  <% end %>
+</table>
