--- a/public/structure.css
+++ b/public/structure.css
@@ -1,12 +1,13 @@
 body {
   font-family: Arial;
-  padding: 40px;
+  padding-left: 40px;
   background-color:
 
 }
 
 h1{
   color: brown;
+  padding-top: 10px;
 }
 
 
