--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>Sweets like Chocolate</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/tables.css">
+  <link rel="stylesheet" href="/structure.css">
+
 </head>
 <body>
   <h1>Sweets like Chocolate</h1>
