--- a/views/products/index.erb
+++ b/views/products/index.erb
@@ -1,36 +1,37 @@
-<h1>Products in stock</h1>
+<h2>Products in stock</h2>
 
 
 <table>
   <tr>
     <th>Product</th>
-    <th></th>
+
     <th>Description</th>
-    <th></th>
+
     <th>Stock Quantity</th>
-    <th></th>
-    <th>Buying cost</th>
-    <th></th>
-    <th>Selling price</th>
-    <th></th>
+
+    <th>Buying cost (£)</th>
+
+    <th>Selling price (£)</th>
+
     <th>Supplier</th>
-    <th></th>
+
     <th>Comments</th>
   </tr>
   <% for product in @products %>
   <tr>
     <td><%= product.product %></td>
-    <td>|</td>
+
     <td><%= product.description %></td>
-    <td>|</td>
+
     <td><%= product.stock_quantity %></td>
-    <td>|</td>
-    <td><%= product.buying_cost %></td>
-    <td>|</td>
-    <td><%= product.selling_price %></td>
-    <td>|</td>
-    <td><%= product.supplier_id %></td>
-    <td>|</td>
+
+    <td><%= product.buying_cost/100.round(2) %></td>
+
+    <td><%= product.selling_price/100.round(2) %></td>
+
+    <td><%= product.supplier.name %></td>
+
   </tr>
   <% end %>
+
 </table>
