add functionality into sinatra files not working

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,8 +16,29 @@
       <li>
         <a href="/products">Products</a>
       </li>
+
+      <li>
+        <a href="/products/add">Add</a>
+      </li>
+
+      <li>
+        <a href="/products/edit">Edit</a>
+      </li>
+      <li>
+        <a href="/products/remove">Remove</a>
+      </li>
+      </li>
       <li>
         <a href="/suppliers">Suppliers</a>
+      </li>
+      <li>
+        <a href="/suppliers/add">Add</a>
+      </li>
+      <li>
+        <a href="/suppliers/edit">Edit</a>
+      </li>
+      <li>
+        <a href="/suppliers/remove">Remove</a>
       </li>
     </ul>
   </nav>
