--- a/views/suppliers/add.erb
+++ b/views/suppliers/add.erb
@@ -1,1 +1,12 @@
 <h2>Add supplier</h2>
+<form method="post" action="/suppliers/add">
+
+<label for="supplier-name">Supplier name:</label>
+<input type="text" name="name" id="supplier-name"/>
+
+<label for="telephone-number">To reorder, call:</label>
+<input type="text" name="telephone_number" id="telephone_number"/>
+
+<input type="submit" value="Add supplier">
+
+</form>
