edit suppliers working

--- a/views/suppliers/add.erb
+++ b/views/suppliers/add.erb
@@ -1,5 +1,5 @@
 <h2>Add supplier</h2>
-<form method="post" action="/suppliers/add">
+<form method="post" action="/suppliers">
 
 <label for="supplier-name">Supplier name:</label>
 <input type="text" name="name" id="supplier-name"/>
