--- a/views/products/index.erb
+++ b/views/products/index.erb
@@ -30,6 +30,7 @@
     <td><%= product.selling_price/100.round(2) %></td>
 
     <td><a href= "/suppliers"><%= product.supplier.name %></a></td>
+    <td><a href="/products/<%= product.id %>/edit">Edit</td>
 
   </tr>
   <% end %>
