--- a/views/suppliers/index.erb
+++ b/views/suppliers/index.erb
@@ -11,6 +11,8 @@
     <td><%= supplier.name %></td>
     <td><a href="tel:<%= supplier.telephone_number %>"><%= supplier.telephone_number %></a></td>
     <td><a href="/suppliers/<%= supplier.id %>/edit">Edit</td>
+    <td><a href="/suppliers/<%= supplier.id %>/delete">Delete</a></td>
+
   </tr>
   <% end %>
 </table>
