add low stock and out of stock to suppliers

--- a/views/products/add.erb
+++ b/views/products/add.erb
@@ -13,11 +13,11 @@
   <input type="number" name="stock_quantity" id="stock-quantity"/>
 
 
-  <label for ="buying-cost">Buying cost:</label>
+  <label for ="buying-cost">Buying cost (pence):</label>
   <input type="number" name="buying_cost" id="buying-cost"/>
 
 
-  <label for ="selling-price">Selling price:</label>
+  <label for ="selling-price">Selling price (pence):</label>
   <input type="number" name="selling_price" id="selling-price"/>
 
   <label for ="supplier">Supplier:</label>
