on product changing buying cost and selling price back to i from f

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
   </tr>
   <% for product in @products %>
   <tr>
-    <td><a href="/edit/"><%= product.product %></a></td>
+    <td><%= product.product %></a></td>
 
     <td><%= product.stock_quantity %></td>
 
