update to drop down menu of products supplies edit.erb

--- a/views/products/add.erb
+++ b/views/products/add.erb
@@ -10,15 +10,15 @@
 
 
   <label for ="stock-quantity">Stock:</label>
-  <input type="number" name="stock_quantity" id="stock-quantity"/>
+  <input type="number" name="stock_quantity" id="stock-quantity" min="0"/>
 
 
   <label for ="buying-cost">Buying cost (pence):</label>
-  <input type="number" name="buying_cost" id="buying-cost"/>
+  <input type="number" name="buying_cost" id="buying-cost" min="0"/>
 
 
   <label for ="selling-price">Selling price (pence):</label>
-  <input type="number" name="selling_price" id="selling-price"/>
+  <input type="number" name="selling_price" id="selling-price" min="0"/>
 
   <label for ="supplier">Supplier:</label>
   <select name="supplier_id">
