--- a/views/suppliers/delete.erb
+++ b/views/suppliers/delete.erb
@@ -4,13 +4,4 @@
 <input type="submit" value="Delete supplier"/>
 </form>
 
- <p>The following products need to be removed or supplier updated prior to deleting this supplier:</p>
-
- <table>
-   <tr>
-     <th>Product</th>
-     <th>Stock</th>
-   </tr>
-
-
-    </table>
+<p>If you receive an error message upon deleting, please check that products previously supplied by this supplier have been removed from inventory.</p>
