--- a/views/products/index.erb
+++ b/views/products/index.erb
@@ -36,7 +36,7 @@
 
     <td><%= product.selling_price/100.round(2) %></td>
 
-    <td><%= (product.selling_price/100.round(2) - product.buying_cost/100.round(2)).round(2) %></td>
+    <td><%= product.mark_up/100.round(2) %></td>
 
     <td><a href= "/suppliers"><%= product.supplier.name %></a></td>
 
