--- a/views/index.erb
+++ b/views/index.erb
@@ -1,33 +1,3 @@
-<h2>Snapshot</h2>
 
-
-<table>
-  <tr>
-    <th>Product</th>
-
-    <th>Stock</th>
-
-    <th>Buying cost</th>
-
-    <th>Supplier</th>
-
-    <th>To reorder, call:</th>
-
-    <th>Comments</th>
-  </tr>
-  <% for product in @products %>
-  <tr>
-    <td><%= product.product %></a></td>
-
-    <td><%= product.stock_quantity %></td>
-
-    <td><%= product.buying_cost/100.round(2) %></td>
-
-    <td><%= product.supplier.name %></td>
-
-    <td><%= product.supplier.telephone_number %></a></td>
-    <% end %>
-
-  </tr>
-
-</table>
+<h2>List of items out of order/low in stock yesterday</h2>
+<img src="../public/images/low_stock.png" alt="Low stock yesterday"/>
