update stock level to a method rather then injection from index products.erb file

--- a/views/suppliers/delete.erb
+++ b/views/suppliers/delete.erb
@@ -1,4 +1,4 @@
-<p>Delete item: <%= @supplier.name %> </p>
+<p>Delete supplier: <%= @supplier.name %> </p>
 
 <p>Products supplied by supplier:</p>
 <ol>
