--- a/views/products/index.erb
+++ b/views/products/index.erb
@@ -41,8 +41,7 @@
     <td><a href= "/suppliers"><%= product.supplier.name %></a></td>
 
     <td>
-    <%= p "Out of stock" if product.stock_quantity == 0  %>
-        <%= p "Low stock" if (product.stock_quantity <= 10) && product.stock_quantity !=0 %>
+       <%= product.stock_level %>
     </td>
 
     <td><a href="/products/<%= product.id %>/edit">Edit</td>
