--- a/public/styles/button.css
+++ b/public/styles/button.css
@@ -2,27 +2,7 @@
   border:0px none;
   border-radius: 3%;
   padding: 8px 12px;
-  color: pink;
+  color: brown;
   cursor:pointer;
 
-}
-
-.btn--danger {
-  background-color: darkred;
-}
-
-.btn--danger:hover {
-  background-color: #730000;
-}
-
-.btn--action:hover {
-  background-color: #495C27;
-}
-
-.btn--action {
-  background-color: darkolivegreen;
-}
-
-.btn--wrapper {
-  margin: 0px 0px 30px 0px;
 }
