minor changes to css

--- a/views/products/add.erb
+++ b/views/products/add.erb
@@ -27,6 +27,6 @@
    <% end %>
   </select>
 
-  <input type="submit" value="Submit">
+  <input class="submit" type="submit" value="Submit">
 
 </form>
