--- a/views/suppliers/edit.erb
+++ b/views/suppliers/edit.erb
@@ -7,6 +7,6 @@
 <label for="telephone-number">To reorder, call:</label>
 <input type="text" name="telephone_number" id="telephone_number" value="<%= @supplier.telephone_number %>"/>
 
-<input type="submit" value="Edit supplier">
+<input class="submit" type="submit" value="Edit supplier">
 
 </form>
