--- a/public/styles/button.css
+++ b/public/styles/button.css
@@ -1,9 +1,14 @@
 .btn {
   border:0px none;
   border-radius: 3%;
-  padding: 8px 12px;
+  padding: 12px;
   color: brown;
   cursor:pointer;
+}
 
-
+.submit{
+  font-size: 1em;
+  background-color: brown;
+  color: white;
+  padding: 2px;
 }
