--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
 
 <h3>List of items out of order/low in stock yesterday</h3>
-<img src="../public/images/low_stock.png" alt="Low stock yesterday"/>
+<img src="/images/low_stock.png" alt="Low stock yesterday"/>
