--- a/views/products/delete.erb
+++ b/views/products/delete.erb
@@ -1,5 +1,5 @@
 <p>Delete item: <%= @product.product %> </p>
 
 <form method="post" action="/products/<%= @product.id %>/delete">
-<input type="submit" value="Delete product"/>
+<input class="submit" type="submit" value="Delete product"/>
 </form>
