--- a/views/products/edit.erb
+++ b/views/products/edit.erb
@@ -2,22 +2,26 @@
 <form method="post" action="/products/<%= @product.id %>">
   <label for ="product-name">Product:</label>
   <input type="text" name="product" id="product-name" value="<%= @product.product %>"/>
-
+  <br>
 
   <label for ="description">Description:</label>
   <input type="text" name="description" id="description" value="<%= @product.description %>"/>
+  <br>
 
 
   <label for ="stock-quantity">Stock:</label>
   <input type="number" name="stock_quantity" id="stock-quantity" value="<%= @product.stock_quantity %>" min="0"/>
+  <br>
 
 
   <label for ="buying-cost">Buying cost (pence):</label>
   <input type="number" name="buying_cost" id="buying-cost" value="<%= @product.buying_cost %>" min="0"/>
+  <br>
 
 
   <label for ="selling-price">Selling price (pence):</label>
   <input type="number" name="selling_price" id="selling-price" value="<%= @product.selling_price %>" min="0"/>
+  <br>
 
   <label for ="supplier">Supplier:</label>
   <select name="supplier_id" id="supplier">
@@ -26,6 +30,6 @@
     <% end %>
   </select>
 
-  <input type="submit" value="Submit">
+  <input class="submit" type="submit" value="Submit">
 
   </form>
