--- a/views/suppliers/add.erb
+++ b/views/suppliers/add.erb
@@ -7,6 +7,6 @@
 <label for="telephone-number">To reorder, call:</label>
 <input type="text" name="telephone_number" id="telephone_number"/>
 
-<input type="submit" value="Add supplier">
+<input class="submit" type="submit" value="Add supplier">
 
 </form>
