--- a/views/suppliers/index.erb
+++ b/views/suppliers/index.erb
@@ -1,7 +1,7 @@
-<h3>Suppliers</h3>
-<li>
-  <a href="/suppliers/add">Add</a>
-</li>
+<h3>Suppliers    <a class="btn-add" href="/suppliers/add">Add</a></h3>
+
+
+
 
 <table>
   <tr>
