--- a/views/products/index.erb
+++ b/views/products/index.erb
@@ -1,8 +1,6 @@
-<h3>Products in stock</h3>
+<h3>Products in stock <a class="btn-add" href="/products/add">Add</a>
+</h3>
 
-<li>
-  <a href="/products/add">Add</a>
-</li>
 
 <table>
   <tr>
